--- a/src/main/resources/static/apiLogin.html
+++ b/src/main/resources/static/apiLogin.html
@@ -6,6 +6,13 @@
 </head>
 <body>
 <button class="btn1">generateToken</button>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script>
+    document.querySelector(".btn1").addEventListener("click",()=> {
+        const data = {mid: "apiuser10", mpw: "1111"}
+        axios.post("http://localhost:8080/generateToken", data)
+    },false)
+</script>
 
 </body>
 </html>
