--- a/src/main/resources/static/apiLogin.html
+++ b/src/main/resources/static/apiLogin.html
@@ -9,8 +9,17 @@
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script>
     document.querySelector(".btn1").addEventListener("click",()=> {
+
         const data = {mid: "apiuser10", mpw: "1111"}
-        axios.post("http://localhost:8080/generateToken", data)
+
+        axios.post("http://localhost:8081/generateToken", data).then(res=>{
+            const accessToken = res.data.accessToken
+            const refreshToken = res.data.refreshToken
+
+            localStorage.setItem("accessToken",accessToken)
+            localStorage.setItem("refreshToken",refreshToken)
+
+        })
     },false)
 </script>
 
